--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Response Generator</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Random Response Generator</title>
+
+   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <button id="checkButton">Check</button>
-    <div id="messageContainer"></div>
-    <p>Just text</p>
-    <script src="script.js"></script>
+   <button class="openBtn" type="submit">Submit</button>
+
+   <div class="popup">
+      <i class="fas fa-check"></i>
+      <h2>Thank You!</h2>
+      <p id="popupText">Thank You!</p>
+      <button class="closeBtn" type="button">OK</button>
+   </div>
+
+   <script src="script.js"></script>
 </body>
 </html>
