--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <div class="popup">
       <i class="fas fa-check"></i>
       <h2>Thank You!</h2>
-      <p id="popupText">Thank You!</p>
+      <p id="popupText"></p>
       <button class="closeBtn" type="button">OK</button>
    </div>
 
