--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-   <button class="openBtn" type="submit">Submit</button>
+   <button class="openBtn" type="submit">Проверка на брата</button>
 
    <div class="popup">
       <i class="fas fa-check"></i>
-      <h2>Thank You!</h2>
+      <h2>Спасибо!</h2>
       <p id="popupText"></p>
       <button class="closeBtn" type="button">OK</button>
    </div>
