--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>Random Response Generator</title>
 
    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+   <link rel="stylesheet" href="lib/all.min.css" />
    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
