--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Random Response Generator</title>
+   
+   <title>Champiks</title>
 
    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-   <link rel="stylesheet" href="lib/all.min.css" />
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-   <button class="openBtn" type="submit">Проверка на брата</button>
+   <button class="openBtn" type="submit">Нажми меня</button>
 
    <div class="popup">
       <i class="fas fa-check"></i>
